// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing UserList component renders correctly 1`] = `
<View>
  <View>
    <RCTScrollView
      data={
        [
          {
            "email": "abhishek@gmail.com",
            "id": "1",
            "name": "Abhishek",
            "role": "Manager",
          },
          {
            "email": "abhishek2@gmail.com",
            "id": "4",
            "name": "Abhishek2",
            "role": "Manager",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          refreshing={false}
        />
      }
      refreshing={false}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <RCTRefreshControl />
      <View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  undefined,
                ],
              ]
            }
            testID="_userListItem_Abhishek"
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#E8f2FB",
                      "borderRadius": 16,
                      "height": 32,
                      "width": 32,
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {
                      "alignSelf": "center",
                      "borderRadius": 5,
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "textAlign": "center",
                          "textAlignVertical": "center",
                        },
                        {
                          "color": "rgba(0, 0, 0, .54)",
                          "fontSize": 16,
                          "lineHeight": 16,
                        },
                        {
                          "color": "#0370CE",
                        },
                      ],
                    ]
                  }
                >
                  A
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 22,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 28,
                      },
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      {
                        "color": "#454545",
                        "fontSize": 20,
                      },
                    ]
                  }
                >
                  Abhishek
                </Text>
                <Text
                  numberOfLines={2}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Manager
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                false,
                false,
                [
                  {
                    "paddingRight": 24,
                    "paddingVertical": 8,
                  },
                  undefined,
                ],
              ]
            }
            testID="_userListItem_Abhishek2"
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "marginVertical": 6,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#E8f2FB",
                      "borderRadius": 16,
                      "height": 32,
                      "width": 32,
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    {
                      "alignSelf": "center",
                      "borderRadius": 5,
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "textAlign": "center",
                          "textAlignVertical": "center",
                        },
                        {
                          "color": "rgba(0, 0, 0, .54)",
                          "fontSize": 16,
                          "lineHeight": 16,
                        },
                        {
                          "color": "#0370CE",
                        },
                      ],
                    ]
                  }
                >
                  A
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "paddingLeft": 16,
                    },
                    {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 22,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 28,
                      },
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      {
                        "color": "#454545",
                        "fontSize": 20,
                      },
                    ]
                  }
                >
                  Abhishek2
                </Text>
                <Text
                  numberOfLines={2}
                  onTextLayout={[Function]}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 14,
                        },
                        {
                          "color": "rgba(73, 69, 79, 1)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Manager
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`snapshot testing UserListScreen renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "marginLeft": "10%",
        "marginTop": "10%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 28,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          {
            "fontWeight": "700",
          },
        ]
      }
    >
      User Types
    </Text>
    <View
      style={
        {
          "marginTop": "4%",
        }
      }
      testID="_userTypeList"
    >
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              false,
              false,
              [
                {
                  "paddingRight": 24,
                  "paddingVertical": 8,
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginVertical": 6,
              }
            }
          >
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": false,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              color="#0370CE"
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  false,
                  {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
              testID="_userType_Manager"
              uncheckedColor="#808080"
            >
              <View
                style={
                  {
                    "opacity": 0,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#0370CE",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 16,
                  },
                  {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "System",
                      "fontSize": 22,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 28,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    {
                      "color": "#454545",
                      "fontSize": 20,
                    },
                  ]
                }
              >
                Manager
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              false,
              false,
              [
                {
                  "paddingRight": 24,
                  "paddingVertical": 8,
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginVertical": 6,
              }
            }
          >
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": true,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              color="#0370CE"
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  false,
                  {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
              testID="_userType_Admin"
              uncheckedColor="#808080"
            >
              <View
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#0370CE",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "paddingLeft": 16,
                  },
                  {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "System",
                      "fontSize": 22,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 28,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    {
                      "color": "#454545",
                      "fontSize": 20,
                    },
                  ]
                }
              >
                Admin
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(202, 196, 208, 1)",
          "height": 0.5,
        },
        undefined,
        false,
        false,
        {
          "alignSelf": "center",
          "marginTop": "8%",
          "width": "80%",
        },
      ]
    }
    testID="_divider"
  />
  <View
    style={
      [
        {
          "backgroundColor": "rgba(231, 224, 236, 1)",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
        },
        {
          "alignSelf": "center",
          "backgroundColor": "#ffffff",
          "borderTopEndRadius": 10,
          "marginBottom": "4%",
          "marginTop": "4%",
          "width": "80%",
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#808080",
          "bottom": 0,
          "height": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "transform": [
            {
              "scaleY": 0.5,
            },
          ],
          "zIndex": 1,
        }
      }
      testID="text-input-underline"
    />
    <View
      style={
        [
          {
            "paddingBottom": 0,
            "paddingTop": 0,
          },
          {
            "minHeight": 56,
          },
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": 0,
              },
            ],
            "zIndex": 3,
          }
        }
      >
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          onLayout={[Function]}
          style={
            {
              "color": "#808080",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 0,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "opacity": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "absolute",
              "textAlign": "left",
              "top": 30,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
                {
                  "scale": 1,
                },
              ],
              "writingDirection": "ltr",
            }
          }
          testID="_searchBox-label-active"
        >
          Search
        </Text>
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 0,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "opacity": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "absolute",
              "textAlign": "left",
              "top": 30,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
                {
                  "scale": 1,
                },
              ],
              "writingDirection": "ltr",
            }
          }
          testID="_searchBox-label-inactive"
        >
          Search
        </Text>
      </View>
      <TextInput
        editable={true}
        maxFontSizeMultiplier={1.5}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder=" "
        placeholderTextColor="rgba(73, 69, 79, 1)"
        selectionColor="#808080"
        style={
          [
            {
              "margin": 0,
            },
            {
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            {
              "height": 56,
            },
            {
              "paddingBottom": 4,
              "paddingTop": 24,
            },
            {
              "color": "#808080",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "textAlign": "left",
              "textAlignVertical": "center",
            },
            false,
            [
              {},
            ],
            undefined,
          ]
        }
        testID="_searchBox"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      {
        "marginLeft": "10%",
        "marginTop": "10%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 28,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          {
            "fontWeight": "700",
          },
        ]
      }
    >
      Manager Users
    </Text>
    <View
      style={
        {
          "marginTop": "4%",
        }
      }
      testID="_userList"
    >
      <View>
        <RCTScrollView
          data={
            [
              {
                "email": "abhishek@gmail.com",
                "id": "1",
                "name": "Abhishek",
                "role": "Manager",
              },
              {
                "email": "abhishek2@gmail.com",
                "id": "4",
                "name": "Abhishek2",
                "role": "Manager",
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onRefresh={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          refreshControl={
            <RefreshControlMock
              onRefresh={[Function]}
              refreshing={false}
            />
          }
          refreshing={false}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={[]}
          viewabilityConfigCallbackPairs={[]}
        >
          <RCTRefreshControl />
          <View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    false,
                    false,
                    [
                      {
                        "paddingRight": 24,
                        "paddingVertical": 8,
                      },
                      undefined,
                    ],
                  ]
                }
                testID="_userListItem_Abhishek"
              >
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "marginVertical": 6,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#E8f2FB",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        {
                          "alignSelf": "center",
                          "borderRadius": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "textAlign": "center",
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "rgba(0, 0, 0, .54)",
                              "fontSize": 16,
                              "lineHeight": 16,
                            },
                            {
                              "color": "#0370CE",
                            },
                          ],
                        ]
                      }
                    >
                      A
                    </Text>
                  </View>
                  <View
                    style={
                      [
                        {
                          "paddingLeft": 16,
                        },
                        {
                          "flex": 1,
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 22,
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 28,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "writingDirection": "ltr",
                          },
                          {
                            "color": "#454545",
                            "fontSize": 20,
                          },
                        ]
                      }
                    >
                      Abhishek
                    </Text>
                    <Text
                      numberOfLines={2}
                      onTextLayout={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Manager
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    false,
                    false,
                    [
                      {
                        "paddingRight": 24,
                        "paddingVertical": 8,
                      },
                      undefined,
                    ],
                  ]
                }
                testID="_userListItem_Abhishek2"
              >
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "marginVertical": 6,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#E8f2FB",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        {
                          "alignSelf": "center",
                          "borderRadius": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "textAlign": "center",
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "rgba(0, 0, 0, .54)",
                              "fontSize": 16,
                              "lineHeight": 16,
                            },
                            {
                              "color": "#0370CE",
                            },
                          ],
                        ]
                      }
                    >
                      A
                    </Text>
                  </View>
                  <View
                    style={
                      [
                        {
                          "paddingLeft": 16,
                        },
                        {
                          "flex": 1,
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 22,
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 28,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "writingDirection": "ltr",
                          },
                          {
                            "color": "#454545",
                            "fontSize": 20,
                          },
                        ]
                      }
                    >
                      Abhishek2
                    </Text>
                    <Text
                      numberOfLines={2}
                      onTextLayout={[Function]}
                      selectable={false}
                      style={
                        [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Manager
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(202, 196, 208, 1)",
          "height": 0.5,
        },
        undefined,
        false,
        false,
        {
          "alignSelf": "center",
          "marginTop": "8%",
          "width": "80%",
        },
      ]
    }
    testID="_divider"
  />
</View>
`;

exports[`snapshot testing UserType component renders correctly 1`] = `
<View
  testID="_userTypeList"
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          false,
          false,
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          accessibilityLiveRegion="polite"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": false,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          color="#0370CE"
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              false,
              {
                "borderRadius": 18,
                "padding": 6,
              },
            ]
          }
          testID="_userType_Manager"
          uncheckedColor="#808080"
        >
          <View
            style={
              {
                "opacity": 0,
              }
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "#0370CE",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰄬
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 28,
                },
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                {
                  "color": "#454545",
                  "fontSize": 20,
                },
              ]
            }
          >
            Manager
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          false,
          false,
          [
            {
              "paddingRight": 24,
              "paddingVertical": 8,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "marginVertical": 6,
          }
        }
      >
        <View
          accessibilityLiveRegion="polite"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": true,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          color="#0370CE"
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              false,
              {
                "borderRadius": 18,
                "padding": 6,
              },
            ]
          }
          testID="_userType_Admin"
          uncheckedColor="#808080"
        >
          <View
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityElementsHidden={true}
              allowFontScaling={false}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "#0370CE",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                  {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰄬
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "paddingLeft": 16,
              },
              {
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 28,
                },
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                {
                  "color": "#454545",
                  "fontSize": 20,
                },
              ]
            }
          >
            Admin
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
